# remerge

./: .gitignore  AI.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  PROMPT.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  TODO.md  deny.toml
.config/: nextest.toml  test-duration-baseline.json
.git-hooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/rulesets/: main.json  rc-branches.json  tags.json
.github/workflows/: audit.yml  ci.yml  docker.yml  nightly.yml  rc-prepare.yml  release-tag.yml  release.yml  sign-release.yml  test-image.yml  virustotal.yml
config/: server.example.toml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  cflags.rs  client.rs  config.rs  lib.rs  main.rs  portage.rs  status_bar.rs  verbosity.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs  ws_log.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  auth.rs  blob_store.rs  config.rs  docker.rs  lib.rs  main.rs  metrics.rs  persistence.rs  queue.rs  registry.rs  repo.rs  runtime.rs  signing.rs  state.rs  tree_store.rs
crates/types/: Cargo.toml
crates/types/src/: api.rs  auth.rs  client.rs  compression.rs  lib.rs  portage.rs  trace.rs  validation.rs  workorder.rs
crates/worker/: Cargo.toml
crates/worker/src/: builder.rs  crossdev.rs  lib.rs  main.rs  parity.rs  portage_setup.rs
docker/: docker-compose.yml  server.Dockerfile  test-stage3.Dockerfile  worker.Dockerfile
docs/: observability.md  operations.md  portage-compatibility.md
docs/archive/: ROADMAP-transport-convergence.md  integration-test-agent-prompt.md  integration-test-suite.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: emerge_arg_filtering.rs  make_conf_vars.rs
overlay/: README.md
overlay/app-portage/remerge/: metadata.xml  remerge-0.0.0.ebuild  remerge-9999.ebuild
overlay/app-portage/remerge-bin/: Manifest  metadata.xml  remerge-bin-0.0.0.ebuild  remerge-bin-9999.ebuild
overlay/app-portage/remerge-server/: Manifest  metadata.xml  remerge-server-0.0.0.ebuild  remerge-server-9999.ebuild
overlay/app-portage/remerge-server-bin/: Manifest  metadata.xml  remerge-server-bin-0.0.0.ebuild
overlay/app-portage/remerge-server/files/: remerge-server.confd  remerge-server.initd  remerge-server.service
overlay/profiles/: categories
overlay/sec-keys/openpgp-keys-remerge/: metadata.xml  openpgp-keys-remerge-20260320.ebuild
overlay/sec-keys/openpgp-keys-remerge/files/: remerge-release.asc
scripts/: ci-local.sh  generate-manifests.py  install-hooks.sh  install.sh  local-debug.sh  test_duration_baseline.py
src/: lib.rs
tests/: blob_store_test.rs  cli_portage_test.rs  cli_ws_verbosity_test.rs  docker_test.rs  e2e_test.rs  env_guard_test.rs  error_test.rs  final_state_parity_test.rs  load_test.rs  runtime_staging_test.rs  server_api_test.rs  types_test.rs  worker_setup_test.rs
tests/common/: fixtures.rs  mod.rs  server.rs
