[package]
name = "remerge"
description = "CLI wrapper around emerge that offloads builds to a binary host worker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "remerge"
path = "src/main.rs"

[dependencies]
remerge-types = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
libc = "0.2"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
