[package]
name = "remerge-server"
description = "Server daemon for the remerge binary host system"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "remerge-server"
path = "src/main.rs"

[dependencies]
remerge-types = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
bollard = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
tar = "0.4"
regex = { workspace = true }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
