[package]
name = "remerge-worker"
description = "Build worker that runs inside Docker containers for the remerge system"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "remerge-worker"
path = "src/main.rs"

[dependencies]
remerge-types = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
[dev-dependencies]
tempfile = "3.27"
